<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/oto_top">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/oto_text_reverse_color"
            android:layout_gravity="center"
            android:id="@+id/oto_base_tab_title"
            android:text="@string/oto_lib_name"/>
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="right">
	        <View android:layout_width="2px"
	            android:layout_height="32dp"
	            android:layout_gravity="center_vertical"
	            android:background ="@drawable/oto_top_line"/>
	        <FrameLayout android:layout_width="40dp"
	            android:layout_height="fill_parent"
	            android:background="@drawable/oto_top_btn_selector"
	            android:id="@+id/oto_main_cancel_button">
		        <ImageView android:layout_width="20dp"
		            android:layout_height="20dp"
		            android:layout_gravity="center"
		            android:background="@drawable/oto_close"/>
	        </FrameLayout>
        </LinearLayout>
    </FrameLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/oto_list_btn_background_pressed"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_weight="1.0">
        
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/oto_insert_phone_number"/>
        <EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:id="@+id/oto_verify_phone_number"
			android:inputType="number"
			android:background="@drawable/oto_bar_text_box"
			android:hint="@string/oto_phone_number">
			<requestFocus />
		</EditText>
		<LinearLayout android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp">
			<EditText android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:layout_marginRight="10dp"
				android:id="@+id/oto_verify_number"
				android:inputType="number"
				android:background="@drawable/oto_bar_text_box"
				android:hint="@string/oto_verify_number"/>
			<Button android:layout_width="100dp"
			    android:layout_height="fill_parent"
			    android:id="@+id/oto_verify_send"
			    android:padding="2dp"
			    android:background="@drawable/oto_base_roundbtn_selector"
			    android:text="@string/oto_send_verify_number"
			    android:textColor="@drawable/oto_base_btn_text_selector"
			    android:textSize="12sp"/>
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_gravity="center"
	        android:id="@+id/oto_oto_setting_terms_of_use"
	        android:gravity="center"
	        android:orientation="horizontal">
               <ImageView android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:paddingRight="5dp"
                   android:id="@+id/oto_verify_agreement_check"
                   android:src="@drawable/oto_check_n"/>
               <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="#0000ff"
                   android:textSize="13dp"
                   android:id="@+id/oto_verify_agreement1"
                   android:layout_marginRight="4dp"
                   android:text="@string/oto_terms_of_use"/>
               <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="#000000"
                   android:textSize="13dp"
                   android:layout_marginRight="4dp"
                   android:text="@string/oto_and"/>
               <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="#0000ff"
                   android:id="@+id/oto_verify_agreement2"
                   android:textSize="13dp"
                   android:layout_marginRight="4dp"
                   android:text="@string/oto_privacy_policy"/>
               <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/oto_myprofile_agreement_ok"
                   android:textColor="#000000"
                   android:textSize="13dp"
                   android:text="@string/oto_agree"/>
	    </LinearLayout>
		<Button android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/oto_verify_confirm"
			android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
            android:text="@string/oto_confirm"
            android:background="@drawable/oto_base_roundbtn_selector"
            android:textColor="@drawable/oto_base_btn_text_selector"
            android:textSize="15sp" />
	</LinearLayout>
</LinearLayout>
