<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:background="#f0f0f0">
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="45dp"
	    android:orientation="horizontal"
	    android:background="@drawable/oto_top_bar_background">
	    <TextView android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:id="@+id/oto_add_friend_tab1"
	        android:layout_weight="1.0"
	        android:gravity="center"
	        android:textStyle="bold"
	        android:text="@string/oto_by_nickname"
	        android:textSize="13sp"/>
	    <TextView android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:id="@+id/oto_add_friend_tab2"
	        android:layout_weight="1.0"
	        android:gravity="center"
	        android:textStyle="bold"
	        android:text="@string/oto_by_id"
	        android:textSize="13sp"/>
	</LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#f0f0f0"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/oto_add_friend_search_text"
		    android:textSize="15sp"
		    android:text="@string/oto_input_id"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="10dp"/>
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:clickable="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >
            <EditText android:id="@+id/oto_add_friend_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dip"
                android:layout_weight="1.0"
                android:background="@drawable/oto_bar_text_selector"
                android:maxHeight="120dip"
                android:scrollbars="vertical"
                android:textSize="16dip" />
            <ImageView android:id="@+id/oto_add_friend_search"
                android:layout_width="36dp"
                android:layout_height="fill_parent"
                android:background="@drawable/oto_yellow_btn_selector"
                android:clickable="true"
                android:padding="3dp"
                android:src="@drawable/oto_conv_search" />
        </LinearLayout>

	</LinearLayout>
	<ListView android:id="@+id/oto_add_friend_list"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:background="@drawable/oto_list_background"
        android:cacheColorHint="#00000000"
        android:footerDividersEnabled="true"
        android:transcriptMode="disabled"
        android:listSelector="@android:color/transparent"
		android:divider="#c4c4c4"
		android:focusable="false"
    	android:dividerHeight="1px"/>
	<TextView android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:textColor="#000000"
	    android:textSize="15dp"
	    android:text="@string/oto_add_friend_alert"
	    android:id="@+id/oto_add_friend_caption"
	    android:padding="25dp"
	    android:gravity="center_horizontal"
	    android:background="@color/oto_list_btn_background_pressed"/>
</LinearLayout>
