<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent" 
      android:layout_height="fill_parent"
      android:orientation="vertical"
      android:background="@drawable/oto_list_background">
    <FrameLayout android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/oto_top">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/oto_text_reverse_color"
            android:layout_gravity="center"
            android:text="@string/oto_notification"/>
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="right">
	        <View android:layout_width="2px"
	            android:layout_height="32dp"
	            android:layout_gravity="center_vertical"
	            android:background ="@drawable/oto_top_line"/>
	        <FrameLayout android:layout_width="40dp"
	            android:layout_height="fill_parent"
	            android:background="@drawable/oto_top_btn_selector"
	            android:id="@+id/oto_main_cancel_button">
		        <ImageView android:layout_width="20dp"
		            android:layout_height="20dp"
		            android:layout_gravity="center"
		            android:background="@drawable/oto_close"/>
	        </FrameLayout>
        </LinearLayout>
    </FrameLayout>
	<ListView android:id="@+id/oto_ot_information_listview"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:background="@drawable/oto_list_background"
        android:cacheColorHint="#00000000"
        android:footerDividersEnabled="true"
        android:transcriptMode="disabled"
        android:listSelector="@android:color/transparent"
		android:divider="#c4c4c4"
		android:focusable="false"
    	android:dividerHeight="1px"/>
    <TextView android:id="@+id/oto_ot_information_empty" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:background="@drawable/oto_transparent_lined_background"
        android:textColor="@android:color/black"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/oto_notification_empty"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/oto_base_list_elem_selector"
        android:clickable="false"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/oto_oto_information_clear_all"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/oto_base_btn_selector"
            android:text="@string/oto_clear_all"
            android:textColor="@drawable/oto_base_btn_text_selector"
            android:textSize="15sp" />
    </LinearLayout>    
</LinearLayout>
